add functionality to render equations in question page

--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -32,7 +32,7 @@
                 Problem Description
               </div>
               <div class="card-text">
-                {{question.body}}
+                <ng-katex-paragraph [paragraph]="body"></ng-katex-paragraph>
               </div>
               <div class="card-img">
                 <img src="..." />
