--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -1,133 +1,136 @@
 <clr-main-container class="main-container">
   <app-mtdj-header></app-mtdj-header>
+  <div class="content-container" id="primary">
+    <div class="content-area">
+      <form clrForm [formGroup]="newQuestionForm">
+        <clr-input-container>
+          <label>Question Title</label>
+          <input clrInput formControlName="title" required />
+        </clr-input-container>
+        <clr-datalist-container>
+          <label>Topic Title</label>
+          <input formControlName="parentTopicTitle" required clrDatalistInput />
+          <datalist>
+            <option *ngFor="let topic of topics" [value]="topic"></option>
+          </datalist>
+        </clr-datalist-container>
 
-  <form clrForm [formGroup]="newQuestionForm">
-    <clr-input-container>
-      <label>Question Title</label>
-      <input clrInput formControlName="title" required />
-    </clr-input-container>
-    <clr-datalist-container>
-      <label>Topic Title</label>
-      <input formControlName="parentTopicTitle" required clrDatalistInput />
-      <datalist>
-        <option *ngFor="let topic of topics" [value]="topic"></option>
-      </datalist>
-    </clr-datalist-container>
+        <clr-select-container>
+          <label>Difficulty</label>
+          <select clrSelect formControlName="difficulty">
+            <option value="Easy">Easy</option>
+            <option value="Medium">Medium</option>
+            <option value="Hard">Hard</option>
+          </select>
+        </clr-select-container>
 
-    <clr-select-container>
-      <label>Difficulty</label>
-      <select clrSelect formControlName="difficulty">
-        <option value="Easy">Easy</option>
-        <option value="Medium">Medium</option>
-        <option value="Hard">Hard</option>
-      </select>
-    </clr-select-container>
+        <clr-textarea-container>
+          <label>Body</label>
+          <textarea
+            clrTextarea
+            formControlName="body"
+            cols="110"
+            rows="5"
+            required
+          ></textarea>
+          <clr-control-helper
+            >Equations should be written in LaTex</clr-control-helper
+          >
+        </clr-textarea-container>
 
-    <clr-textarea-container>
-      <label>Body</label>
-      <textarea
-        clrTextarea
-        formControlName="body"
-        cols="110"
-        rows="5"
-        required
-      ></textarea>
-      <clr-control-helper
-        >Equations should be written in LaTex</clr-control-helper
-      >
-    </clr-textarea-container>
+        <clr-textarea-container>
+          <label>Sample Answer</label>
+          <textarea
+            clrTextarea
+            formControlName="sampleAnswer"
+            cols="110"
+            rows="5"
+          ></textarea>
+          <clr-control-helper
+            >An example of how to answer the question in a
+            textbox</clr-control-helper
+          >
+        </clr-textarea-container>
 
-    <clr-textarea-container>
-      <label>Sample Answer</label>
-      <textarea
-        clrTextarea
-        formControlName="sampleAnswer"
-        cols="110"
-        rows="5"
-      ></textarea>
-      <clr-control-helper
-        >An example of how to answer the question in a
-        textbox</clr-control-helper
-      >
-    </clr-textarea-container>
+        <clr-textarea-container>
+          <label>Answer</label>
+          <textarea
+            clrTextarea
+            formControlName="answer"
+            cols="110"
+            rows="5"
+            required
+          ></textarea>
+        </clr-textarea-container>
 
-    <clr-textarea-container>
-      <label>Answer</label>
-      <textarea
-        clrTextarea
-        formControlName="answer"
-        cols="110"
-        rows="5"
-        required
-      ></textarea>
-    </clr-textarea-container>
+        <clr-input-container>
+          <label>Hint 1</label>
+          <input clrInput formControlName="hint1" size="100" />
+        </clr-input-container>
+        <clr-input-container>
+          <label>Hint 2</label>
+          <input clrInput formControlName="hint2" size="100" />
+        </clr-input-container>
+        <clr-input-container>
+          <label>Hint 3</label>
+          <input clrInput formControlName="hint3" size="100" />
+        </clr-input-container>
 
-    <clr-input-container>
-      <label>Hint 1</label>
-      <input clrInput formControlName="hint1" size="100" />
-    </clr-input-container>
-    <clr-input-container>
-      <label>Hint 2</label>
-      <input clrInput formControlName="hint2" size="100" />
-    </clr-input-container>
-    <clr-input-container>
-      <label>Hint 3</label>
-      <input clrInput formControlName="hint3" size="100" />
-    </clr-input-container>
+        <clr-input-container>
+          <label>Option 1</label>
+          <input clrInput formControlName="option1" size="100" />
+          <clr-control-helper
+            >Equations should be written in LaTex</clr-control-helper
+          >
+        </clr-input-container>
+        <clr-input-container>
+          <label>Option 2</label>
+          <input clrInput formControlName="option2" size="100" />
+          <clr-control-helper
+            >Equations should be written in LaTex</clr-control-helper
+          >
+        </clr-input-container>
+        <clr-input-container>
+          <label>Option 3</label>
+          <input clrInput formControlName="option3" size="100" />
+          <clr-control-helper
+            >Equations should be written in LaTex</clr-control-helper
+          >
+        </clr-input-container>
+        <clr-input-container>
+          <label>Option 4</label>
+          <input clrInput formControlName="option4" size="100" />
+          <clr-control-helper
+            >Equations should be written in LaTex</clr-control-helper
+          >
+        </clr-input-container>
 
-    <clr-input-container>
-      <label>Option 1</label>
-      <input clrInput formControlName="option1" size="100" />
-      <clr-control-helper
-        >Equations should be written in LaTex</clr-control-helper
-      >
-    </clr-input-container>
-    <clr-input-container>
-      <label>Option 2</label>
-      <input clrInput formControlName="option2" size="100" />
-      <clr-control-helper
-        >Equations should be written in LaTex</clr-control-helper
-      >
-    </clr-input-container>
-    <clr-input-container>
-      <label>Option 3</label>
-      <input clrInput formControlName="option3" size="100" />
-      <clr-control-helper
-        >Equations should be written in LaTex</clr-control-helper
-      >
-    </clr-input-container>
-    <clr-input-container>
-      <label>Option 4</label>
-      <input clrInput formControlName="option4" size="100" />
-      <clr-control-helper
-        >Equations should be written in LaTex</clr-control-helper
-      >
-    </clr-input-container>
-
-    <button type="submit" class="btn btn-dark" (click)="onSubmit()">
-      Submit Question
-    </button>
-    <clr-alert
-      *ngIf="!validateOptions"
-      clrAlertType="danger"
-      [clrAlertClosable]="false"
-    >
-      Please make sure there is more than one option and they are in order.
-    </clr-alert>
-    <clr-alert
-      *ngIf="questionExists"
-      clrAlertType="danger"
-      [clrAlertClosable]="false"
-    >
-      A Question of that title already exists.
-    </clr-alert>
-    <clr-alert
-      *ngIf="submitted"
-      clrAlertType="success"
-      [clrAlertClosable]="false"
-    >
-      Question submission successful.
-    </clr-alert>
-  </form>
+        <button type="submit" class="btn btn-dark" (click)="onSubmit()">
+          Submit Question
+        </button>
+        <clr-alert
+          *ngIf="!validateOptions"
+          clrAlertType="danger"
+          [clrAlertClosable]="false"
+        >
+          Please make sure there is more than one option and they are in order.
+        </clr-alert>
+        <clr-alert
+          *ngIf="questionExists"
+          clrAlertType="danger"
+          [clrAlertClosable]="false"
+        >
+          A Question of that title already exists.
+        </clr-alert>
+        <clr-alert
+          *ngIf="submitted"
+          clrAlertType="success"
+          [clrAlertClosable]="false"
+        >
+          Question submission successful.
+        </clr-alert>
+      </form>
+    </div>
+  </div>
   <app-mtdg-footer></app-mtdg-footer>
 </clr-main-container>
