--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -1,6 +1,9 @@
-<clr-main-container class="main-container" *ngIf="question$ | async as question">
+<clr-main-container
+  class="main-container"
+  *ngIf="question$ | async as question"
+>
   <app-mtdj-header></app-mtdj-header>
-  <nav class="subnav">
+  <nav class="subnav mtdj__practice_subnav">
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link" routerLink="/dashboard">Practice</a>
@@ -9,13 +12,21 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/topics', question.parentTopicTitle]">{{question.formattedParentTopicTitle}}</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/topics', question.parentTopicTitle]"
+          >{{ question.formattedParentTopicTitle }}</a
+        >
       </li>
       <li class="nav-item">
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link active" [routerLink]="['/questions', question.title]">{{question.formattedTitle}}</a>
+        <a
+          class="nav-link active"
+          [routerLink]="['/questions', question.title]"
+          >{{ question.formattedTitle }}</a
+        >
       </li>
     </ul>
   </nav>
@@ -25,28 +36,34 @@
         <div class="clr-col-lg-6 clr-col-12 mtdj__question-container">
           <div class="card">
             <div class="card-header">
-              {{question.formattedTitle}}
+              {{ question.formattedTitle }}
             </div>
             <div class="card-block">
               <div class="card-title">
                 Problem Description
               </div>
               <div class="card-text">
-                <ng-katex-paragraph [paragraph]="question.questionBody"></ng-katex-paragraph>
+                <ng-katex-paragraph
+                  [paragraph]="question.questionBody"
+                ></ng-katex-paragraph>
               </div>
               <div class="card-img">
                 <img src="..." />
               </div>
             </div>
             <ul class="list-group">
-              <li class="list-group-item" *ngFor="let hint of question.hints">{{hint}}</li>
+              <li class="list-group-item" *ngFor="let hint of question.hints">
+                {{ hint }}
+              </li>
             </ul>
             <div class="card-footer">
               <button class="btn btn-sm btn-link">Show hints</button>
             </div>
           </div>
         </div>
-        <div class="clr-col-lg-6  clr-col-12 mtdj__question-submission-container">
+        <div
+          class="clr-col-lg-6 clr-col-12 mtdj__question-submission-container"
+        >
           <div class="card">
             <div class="card-header">
               Header
@@ -60,17 +77,32 @@
                   Some useful explanation on how to pick answers
                   <clr-radio-container>
                     <label>Options</label>
-                    <clr-radio-wrapper *ngFor="let each of question.questionAnswerOptions">
-                      <input type="radio" clrRadio name="sample" required value="{{each}}" formControlName="sample" />
-                      <label>{{each}}</label>
+                    <clr-radio-wrapper
+                      *ngFor="let each of question.questionAnswerOptions"
+                    >
+                      <input
+                        type="radio"
+                        clrRadio
+                        name="sample"
+                        required
+                        value="{{ each }}"
+                        formControlName="sample"
+                      />
+                      <label>{{ each }}</label>
                     </clr-radio-wrapper>
                     <clr-control-helper>Helper text</clr-control-helper>
-                    <clr-control-error>This field is required!</clr-control-error>
+                    <clr-control-error
+                      >This field is required!</clr-control-error
+                    >
                   </clr-radio-container>
                 </div>
               </div>
               <div class="card-footer">
-                <button class="btn btn-primary" type="submit" (click)="submit()">
+                <button
+                  class="btn btn-primary"
+                  type="submit"
+                  (click)="submit()"
+                >
                   Submit
                 </button>
                 <button class="btn" type="button" (click)="resetForm()">
