--- a/src/app/components/practice/question-page/question-page.component.html
+++ b/src/app/components/practice/question-page/question-page.component.html
@@ -47,7 +47,7 @@
                   [paragraph]="question.questionBody"
                 ></ng-katex-paragraph>
               </div>
-              <div class="card-img">
+              <div class="card-img" *ngIf="question.imageUrl">
                 <img src="..." />
               </div>
             </div>
