Relocate topic and question areas under practice

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
           *ngFor="let topic of topics"
         >
           <a
-            [routerLink]="['/topics', topic.title]"
+            [routerLink]="['/practice/topics', topic.title]"
             class="card clickable mtdj__dashboard_topic_card"
           >
             <div class="card-header">
