--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -130,7 +130,7 @@
               >
             </clr-input-container>
 
-            <button type="submit" class="btn btn-dark" (click)="onSubmit()">
+            <button type="submit" class="btn btn-primary" (click)="onSubmit()">
               Submit Question
             </button>
             <clr-alert
