--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -7,6 +7,20 @@
           class="clr-col-lg-6 clr-col-sm-12 clr-col-md-12 mtdj__question-auth-input-container"
         >
           <form clrForm [formGroup]="newQuestionForm" (ngSubmit)="onSubmit()">
+            <clr-alert [clrAlertType]="'success'" [clrAlertClosable]="true">
+              <clr-alert-item>
+                <span class="alert-text">
+                  The question was submitted successfully.
+                </span>
+              </clr-alert-item>
+            </clr-alert>
+            <clr-alert [clrAlertType]="'danger'" [clrAlertClosable]="true">
+              <clr-alert-item>
+                <span class="alert-text">
+                  The question could not be submitted please try again later.
+                </span>
+              </clr-alert-item>
+            </clr-alert>
             <clr-tabs>
               <clr-tab>
                 <button clrTabLink id="link1">Write</button>
