--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -8,14 +8,14 @@
         >
           <form clrForm [formGroup]="newQuestionForm" (ngSubmit)="onSubmit()">
             <clr-alerts *ngIf="successfulFormSubmission$ | async as successfulFormSubmission">
-              <clr-alert [clrAlertType]="'success'" [clrAlertClosable]="true">
+              <clr-alert [clrAlertType]="'success'" [clrAlertClosable]="true" *ngIf="successfulFormSubmission === true">
                 <clr-alert-item>
                   <span class="alert-text">
                     The question was submitted successfully.
                   </span>
                 </clr-alert-item>
               </clr-alert>
-              <clr-alert [clrAlertType]="'danger'" [clrAlertClosable]="true">
+              <clr-alert [clrAlertType]="'danger'" [clrAlertClosable]="true" *ngIf="successfulFormSubmission === false">
                 <clr-alert-item>
                   <span class="alert-text">
                     The question could not be submitted please try again later.
