Add placeholders in question authoring section

--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -57,6 +57,7 @@
                       clrTextarea
                       formControlName="body"
                       required
+                      placeholder="{{bodyPlaceholder}}"
                     ></textarea>
                     <clr-control-helper
                       >Equations should be written in LaTex</clr-control-helper
@@ -117,6 +118,7 @@
                       class=".mtdj__question-auth-input--long"
                       clrInput
                       formControlName="option1"
+                      placeholder="{{optionPlaceholder}}"
                     />
                     <clr-control-helper
                       >Equations should be written in LaTex</clr-control-helper
