Fix failing unit test for form status reset

--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -230,6 +230,7 @@
                 [clrAlertType]="'success'"
                 [clrAlertClosable]="true"
                 *ngIf="successfulFormSubmission?.status === true"
+                (clrAlertClosedChange)="resetAlertStatus()"
               >
                 <clr-alert-item>
                   <span class="alert-text">
@@ -241,6 +242,7 @@
                 [clrAlertType]="'danger'"
                 [clrAlertClosable]="true"
                 *ngIf="successfulFormSubmission?.status === false"
+                (clrAlertClosedChange)="resetAlertStatus()"
               >
                 <clr-alert-item>
                   <span class="alert-text">
