Add routing to login component

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
             </a>
         </div>
         <div class="header-actions">
-            <a routerLink="..."  routerLinkActive="active"  class="nav-link nav-text">
+            <a routerLink="/auth/login"  routerLinkActive="active"  class="nav-link nav-text">
                 Login
             </a>
             <a routerLink="/auth/signup"  routerLinkActive="active" class="nav-link nav-text mtdj__button_signup">
