--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -10,17 +10,17 @@
       <h5 class="hint">Login to your account</h5>
     </section>
     <div class="login-group">
-      <clr-input-container>
-        <label class="clr-sr-only">Email</label>
+      <clr-input-container id="mtdj__signupform-input-username">
+        <label class="clr-sr-only">Username</label>
         <input
           type="text"
-          name="email"
+          name="username"
           clrInput
-          placeholder="Email"
-          formControlName="email"
+          placeholder="Username"
+          formControlName="username"
         />
       </clr-input-container>
-      <clr-password-container>
+      <clr-password-container id="mtdj__signupform-input-password">
         <label class="clr-sr-only">Password</label>
         <input
           type="password"
