Read template params optionally

--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.html
@@ -22,8 +22,8 @@
                       characters</clr-control-error
                     >
                     <clr-control-error *clrIfError="'titleAlreadyExists'">{{
-                      newQuestionForm.controls.title.errors.titleAlreadyExists
-                        .errorMessage
+                      newQuestionForm.controls.title.errors?.titleAlreadyExists
+                        ?.errorMessage
                     }}</clr-control-error>
                   </clr-input-container>
                   <clr-datalist-container id="mtdj__question-auth-input-topic">
