Add state for login fail in login component

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -33,7 +33,7 @@
       </clr-password-container>
       <div
         class="error active login-status"
-        *ngIf="(userLoginForm.submitted && !userLoginFormGroup.valid)"
+        *ngIf="(userLoginForm.submitted && loginFailed)"
       >
         Invalid user name or password
       </div>
