--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -37,5 +37,7 @@
       </div>
     </div>
   </div>
+  <a routerLink="/practice/create"  routerLinkActive="active"  class="nav-link mtdj__dashboard_create_question"> Create Question
+  </a>
   <app-mtdg-footer></app-mtdg-footer>
 </clr-main-container>
