--- a/src/app/components/practice/question-authoring-page/question-authoring-page.component.scss
+++ b/src/app/components/practice/question-authoring-page/question-authoring-page.component.scss
@@ -1,4 +1,13 @@
-.mtdj__question-auth-feature-area .mtdj__question-auth-input-container form textarea {
+.mtdj__question-auth-feature-area
+  .mtdj__question-auth-input-container
+  form
+  textarea {
   height: 5rem;
   width: 90%;
+}
+
+.mtdj__question-auth-unauthorised-warning
+  .mtdj__question-auth-unauthorised-warning-icon.clr-col {
+  justify-content: center;
+  display: flex;
 }
