Use practice instead of attempt on home subnav

--- a/src/app/components/practice/practice-home/practice-home.component.html
+++ b/src/app/components/practice/practice-home/practice-home.component.html
@@ -1,10 +1,10 @@
 <nav class="subnav mtdj__practice_subnav">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" routerLink="/practice">Attempt Questions</a>
+      <a class="nav-link active" routerLink="/practice">Practice Questions</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mtdj__practice_create_question" routerLink="/practice/create">Create Question</a>
+      <a class="nav-link mtdj__practice_create_question" routerLink="/practice/create">Create Questions</a>
     </li>
   </ul>
 </nav>
